--- a/services/exercise_compiler/Cargo.toml
+++ b/services/exercise_compiler/Cargo.toml
@@ -12,3 +12,11 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 tokio = { version = "1", features = ["full"] }
+tempfile = "3.8.1"
+rand = "0.8.5"
+actix-rt = "2.9.0"
+uuid = {version = "1.6.1", features = [
+    "v4",
+    "fast-rng",
+    "macro-diagnostics"
+]}
